fix: increase color contrast between text and background

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,3 @@
 $font-size-base: 16px;
 $blockquote-font-size: $font-size-base;
+$blockquote-small-color: #424242;
