--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,22 @@
 @import './variables';
 @import './bootstrap';
 @import './style';
-@import './typo';
+
+#bloc-6 {
+    h1, p {
+        color: #0d0d0d !important;
+    }
+}
+
+#bloc-8 p {
+    color: #424242 !important;
+}
+
+.black-overlay {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.25);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
